# operating-system-shell

./: CMakeLists.txt  README.md
include/: ANSI_escapes.h  aliases.h  commands.h  common.h  handle_command.h  pipes.h  utils.h
src/: aliases.c  commands.c  handle_command.c  main.c  pipes.c  utils.c
